<resources>
    <string name="app_name">YOLOv8 TfLite</string>
    <string name="iniciarSesion">Login</string>
    <string name="todo">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="db_url">jdbc:mysql://16.0.1000.6:1433/test_ra_bd</string>
    <string name="db_username">usr_ana</string>
    <string name="db_password">pwd_ana</string>
    <string name="deteccion">DETECCIÓN</string>
    <string name="qr">QR</string>
    <string name="reconocimiento">RECONOCIMIENTO</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="reset">RESET</string>
    <string name="zoom">Zoom</string>
    <string name="men_t4_0330_wr_00708_c1e2a">Menú T4-0330-WR-00708-C1E2A</string>
    <string name="t200_rh_003">T200-RH-003</string>
    <string name="t210_rh_002">T210-RH-002</string>
    <string name="v2010_v_101">V2010-V-101</string>
    <string name="v2010_v_102">V2010-V-102</string>
    <string name="v2010_v_110">V2010-V-110</string>
    <string name="v2010_v_111">V2010-V-111</string>
    <string name="v2010_v_120">V2010-V-120</string>
    <string name="v2011_v_251">V2011-V-251</string>
    <string name="documentaci_n">DOCUMENTACIÓN</string>
    <string name="inspecci_n">INSPECCIÓN</string>
    <string name="mantenimiento">MANTENIMIENTO</string>
    <string name="inspecciones_anteriores">INSPECCIONES ANTERIORES</string>
    <string name="informaci_n_del_equipo">INFORMACIÓN DEL EQUIPO</string>
    <string name="planos">PLANOS</string>
    <string name="videos">VIDEOS</string>
    <string name="documentaci_nTitulo">DOCUMENTACIÓN</string>
    <string name="documentaci_nTitul">DOCUMENTACIÓN</string>
    <string name="documentaci_nTitu">DOCUMENTACIÓN</string>
    <string name="despieces">DESPIECES</string>
    <string name="datos_en_tiempo_real">DATOS EN TIEMPO REAL</string>
    <string name="t4_0330_wr_00708_c1e2a">T4-0330-WR-00708-C1E2A</string>
    <string name="men_equipo2">MENÚ EQUIPO2</string>
    <string name="men_documentaci_n">MENÚ DOCUMENTACIÓN</string>
    <string name="men_detecci_n">MENÚ DETECCIÓN</string>
</resources>

