<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradiente_inicio"
    app:itemBackground="@color/green2"
    app:itemIconTint="@color/green2"
    app:itemTextColor="@color/white"
    tools:context=".MenuPrincipal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="550dp"/>


        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/resetZoomButton"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/reset"
                android:textSize="15sp"
                android:background="@drawable/rectangulo"
                android:textStyle="bold" />

            <Button
                android:id="@+id/MenuPrincipal"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:background="@drawable/rectangulo"
                android:gravity="center"
                android:text="@string/menu_principal"
                android:textSize="15sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/zoomButton"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/rectangulo"
                android:gravity="center"
                android:text="@string/zoom"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>


