<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradiente_inicio"
    tools:context=".Login">


    <FrameLayout
        android:id="@+id/menuLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/rectangulo"
        android:visibility="visible"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="4">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:weightSum="1"
                android:orientation="horizontal"
                android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@mipmap/boton_login"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                tools:ignore="NestedWeights" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:weightSum="1"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/editTextUsuario"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="22sp"
                    android:background="@drawable/rectangulo"
                    android:gravity="center"
                    android:hint="@string/usuario"
                    tools:ignore="NestedWeights" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:weightSum="1"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="22sp"
                    android:background="@drawable/rectangulo"
                    android:gravity="center"
                    android:hint="@string/contrase_a"
                    tools:ignore="NestedWeights" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:weightSum="1"
                android:orientation="horizontal"
                android:gravity="center">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/rectangulo"
                android:gravity="center"
                android:textSize="22sp"
                android:hint="@string/ingresar"
                tools:ignore="NestedWeights" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>